--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,5 +1,5 @@
 html {
-    font-size: calc(1rem + 0.5vw);
+    font-size: 1rem;
     font-family: monospace;
 
     --ratio: 1.25;
@@ -77,7 +77,6 @@ nav {
     grid-area: nav;
 
     user-select: none;
-    font-size: var(--s-2);
 
     display: flex;
     align-items: center;
@@ -104,6 +103,7 @@ button {
     border-radius: 0.25rem;
     padding: var(--s-4) var(--s-2);
     font-weight: 500;
+    font-size: var(--s-1);
     cursor: pointer;
 }
 
@@ -116,6 +116,7 @@ select {
     border-radius: 0.15rem;
     background: transparent;
     outline: none !important;
+    font-size: var(--s-1);
 }
 
 option, optgroup {
@@ -123,5 +124,5 @@ option, optgroup {
 }
 
 label {
-    font-size: var(--s-3);
+    font-size: var(--s-2);
 }
