--- a/frontend/src/scratch/Scratch.module.css
+++ b/frontend/src/scratch/Scratch.module.css
@@ -20,6 +20,11 @@
     margin-right: var(--s-4);
 }
 
+.context {
+    margin-left: var(--s-4);
+    margin-right: auto;
+}
+
 .diff :global(table.diff),
 .log {
     border: none;
