--- a/frontend/src/scratch/NewScratch.module.css
+++ b/frontend/src/scratch/NewScratch.module.css
@@ -6,9 +6,8 @@
 }
 
 .card {
-    border: .1em solid #fff;
+    border: .1em solid rgb(100, 100, 100);
     border-radius: .6em;
-    box-shadow: 0 0 1em #999, 0 0 .5em #999 inset;
 
     width: calc(var(--s1) * 40);
     height: calc(var(--s1) * 30);
