--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,6 +1,8 @@
 html {
-    font-size: 1rem;
-    font-family: system-ui;
+    font-size: 16px;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+    line-height: 1.5;
+    text-rendering: optimizeQuality;
 
     --ratio: 1.25;
     --s-5: calc(var(--s-4) / var(--ratio));
@@ -31,12 +33,10 @@ html {
 }
 
 body {
-    background: rgb(20, 20, 20);
-    color: #ccc;
+    background: #0c0e12;
+    color: rgb(201, 199, 209);
     line-height: var(--ratio);
     overflow: hidden;
-    height: 100vh;
-    text-rendering: optimizeSpeed;
 }
 
 #root {
@@ -48,7 +48,6 @@ body {
     flex: 1;
     display: grid;
     grid-template-rows: auto 1fr;
-    padding: var(--s1);
     grid-template-areas:
         "nav"
         "main";
@@ -63,7 +62,7 @@ nav {
     align-items: center;
     justify-content: space-between;
 
-    padding-bottom: var(--s1);
+    padding: 1em;
 }
 
 main {
@@ -71,26 +70,22 @@ main {
     overflow: hidden;
 }
 
-button {
-    background: #000;
-    color: #fff;
-    border: 0.125rem solid;
-    border-bottom: 0.2rem solid;
+button, .button {
+    background: #00000044;
+    color: #ffffffcc;
+
+    border: 0;
     border-radius: 0.25rem;
-    padding: var(--s-4) var(--s-2);
-    font-weight: 500;
-    font-size: var(--s-1);
+
+    padding: .6em 1em;
+
     cursor: pointer;
-    transition: opacity 80ms ease-out;
+
     user-select: none;
 }
 
-button:not([disabled]):active {
-    border-bottom: 0.125rem solid; /* TODO: use box shadow to maintain height */
-}
-
 button[disabled] {
-    opacity: 0.4;
+    color: #ffffff33;
     cursor: not-allowed;
 }
 
@@ -119,5 +114,11 @@ label {
 }
 
 ::selection {
+    background: #2A2A2A;
+}
+
+nav .button {
+    font-size: 0.8em;
+    text-decoration: none;
     background: #2A2A2A;
 }
