fix diff explanation text flashing

--- a/frontend/src/scratch/Scratch.module.css
+++ b/frontend/src/scratch/Scratch.module.css
@@ -89,11 +89,15 @@
 }
 
 .diffExplanation {
-    opacity: 0.3;
+    opacity: 0.0;
     transition: opacity 100ms ease-out;
 }
 
-.diffExplanation:hover {
+.diffExplanation.visible {
+    opacity: 0.3;
+}
+
+.diffExplanation.visible:hover {
     opacity: 1.0;
 }
 
