--- a/frontend/src/scratch/Scratch.module.css
+++ b/frontend/src/scratch/Scratch.module.css
@@ -91,6 +91,7 @@
 .diffExplanation {
     opacity: 0.0;
     transition: opacity 100ms ease-out;
+    word-wrap: no-wrap;
 }
 
 .diffExplanation.visible {
