update frontend for new api

--- a/frontend/src/compiler/CompilerOpts.module.css
+++ b/frontend/src/compiler/CompilerOpts.module.css
@@ -1,9 +1,7 @@
 .container {
-    margin: 1em; /* TEMP */
-
     border-radius: 1em;
     padding: 1.5em;
-    background: #14161a;
+    background: #22272d;
 }
 
 .row {
