--- a/frontend/src/scratch/Scratch.module.css
+++ b/frontend/src/scratch/Scratch.module.css
@@ -34,25 +34,25 @@
     white-space: pre;
 }
 
-.diff :global(.immediate) { color: #e78c45 }
-.diff :global(.stack) { color: #b9ca4a }
-.diff :global(.register) { color: #e78c45 }
+.diff :global(.immediate) { color: #6D6DFF }
+.diff :global(.stack) { color: #e3fc45 }
+.diff :global(.register) { color: #e3fc45 }
 .diff :global(.delay-slot) { font-weight: bold; color: #969896 }
-.diff :global(.diff-change) { color: #b9ca4a }
-.diff :global(.diff-add) { color: #718c00 }
+.diff :global(.diff-change) { color: #6D6DFF }
+.diff :global(.diff-add) { color: #45bd00 }
 .diff :global(.diff-remove) { color: #c82829 }
 .diff :global(.source-filename) { font-weight: bold }
 .diff :global(.source-function) { font-weight: bold; text-decoration: underline }
 :diff :global(.source-other) { font-style: italic }
-.diff :global(.rotation-0) { color: #0074D9 }
-.diff :global(.rotation-1) { color: #7FDBFF }
-.diff :global(.rotation-2) { color: #F012BE }
-.diff :global(.rotation-3) { color: #FF851B }
-.diff :global(.rotation-4) { color: #3D9970 }
-.diff :global(.rotation-5) { color: #01FF70 }
-.diff :global(.rotation-6) { color: #2ECC40 }
-.diff :global(.rotation-7) { color: #B10DC9 }
-.diff :global(.rotation-8) { color: #39CCCC }
+.diff :global(.rotation-0) { color: magenta}
+.diff :global(.rotation-1) { color: cyan }
+.diff :global(.rotation-2) { color: rgb(0, 212, 0) }
+.diff :global(.rotation-3) { color: red }
+.diff :global(.rotation-4) { color: lightyellow }
+.diff :global(.rotation-5) { color: lightpink }
+.diff :global(.rotation-6) { color: lightcyan }
+.diff :global(.rotation-7) { color: lightgreen }
+.diff :global(.rotation-8) { color: grey }
 
 .sectionHeader {
     flex: 0;
@@ -110,7 +110,7 @@
     padding: 1em;
     flex: 1;
     overflow: auto;
-    user-select: initial;
+    user-select: text;
 }
 
 .compiling :global(.octicon) {
