--- a/frontend/src/compiler/CompilerOpts.module.css
+++ b/frontend/src/compiler/CompilerOpts.module.css
@@ -1,5 +1,20 @@
+.header {
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    padding: 1em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    background: #292e35;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .container {
-    border-radius: 1em;
+    border-bottom-left-radius: 1em;
+    border-bottom-right-radius: 1em;
     padding: 1.5em;
     background: #22272d;
 }
