--- a/frontend/src/user/UserLink.module.css
+++ b/frontend/src/user/UserLink.module.css
@@ -3,7 +3,15 @@
     align-items: center;
     justify-content: center;
     gap: .5em;
-    cursor: default;
+    cursor: pointer;
+
+    border-radius: 2em;
+    padding: .6em;
+    padding-right: .9em;
+}
+
+.user:hover {
+    background: #ffffff11;
 }
 
 .avatar {
