use cursor:default for disabled buttons

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -92,7 +92,7 @@ button, .button {
 
 button[disabled] {
     color: #ffffff33;
-    cursor: not-allowed;
+    cursor: default;
 }
 
 button:active, .button:active {
