--- a/frontend/src/scratch/Scratch.module.css
+++ b/frontend/src/scratch/Scratch.module.css
@@ -24,9 +24,10 @@
 
 .diff {
     display: block;
+    border-spacing: 1em 0;
 }
 
-.diff :global(table.diff),
+.diff,
 .log {
     border: none;
     font-family: monospace;
@@ -34,25 +35,26 @@
     white-space: pre;
 }
 
-.diff :global(.immediate) { color: #6D6DFF }
-.diff :global(.stack) { color: #e3fc45 }
-.diff :global(.register) { color: #e3fc45 }
-.diff :global(.delay-slot) { font-weight: bold; color: #969896 }
-.diff :global(.diff-change) { color: #6D6DFF }
-.diff :global(.diff-add) { color: #45bd00 }
-.diff :global(.diff-remove) { color: #c82829 }
-.diff :global(.source-filename) { font-weight: bold }
-.diff :global(.source-function) { font-weight: bold; text-decoration: underline }
-:diff :global(.source-other) { font-style: italic }
-.diff :global(.rotation-0) { color: magenta}
-.diff :global(.rotation-1) { color: cyan }
-.diff :global(.rotation-2) { color: rgb(0, 212, 0) }
-.diff :global(.rotation-3) { color: red }
-.diff :global(.rotation-4) { color: lightyellow }
-.diff :global(.rotation-5) { color: lightpink }
-.diff :global(.rotation-6) { color: lightcyan }
-.diff :global(.rotation-7) { color: lightgreen }
-.diff :global(.rotation-8) { color: grey }
+.diff-immediate { color: #6D6DFF }
+.diff-stack { color: #e3fc45 }
+.diff-register { color: #e3fc45 }
+.diff-delay_slot { font-weight: bold; color: #969896 }
+.diff-diff_change { color: #6D6DFF }
+.diff-diff_add { color: #45bd00 }
+.diff-diff_remove { color: #c82829 }
+.diff-source_filename { font-weight: bold }
+.diff-source_function { font-weight: bold; text-decoration: underline }
+.diff-source_other { font-style: italic }
+.diff-rotation-0 { color: magenta}
+.diff-rotation-1 { color: cyan }
+.diff-rotation-2 { color: rgb(0, 212, 0) }
+.diff-rotation-3 { color: red }
+.diff-rotation-4 { color: lightyellow }
+.diff-rotation-5 { color: lightpink }
+.diff-rotation-6 { color: lightcyan }
+.diff-rotation-7 { color: lightgreen }
+.diff-rotation-8 { color: grey }
+.diffLineNumber { color: grey; font-style: italic; font-size: 0.7em }
 
 .sectionHeader {
     font-size: 1rem;
