--- a/frontend/src/compiler/CompilerButton.module.css
+++ b/frontend/src/compiler/CompilerButton.module.css
@@ -1,5 +1,8 @@
 .popover {
+    border: 1px solid var(--g500);
     border-radius: 1em;
     box-shadow: 0 2px 8px 0 #00000088;
     max-width: 50em;
+
+    z-index: 999;
 }
