--- a/frontend/src/compiler/CompilerOpts.module.css
+++ b/frontend/src/compiler/CompilerOpts.module.css
@@ -4,7 +4,8 @@
     padding: 1em;
     padding-left: 1.5em;
     padding-right: 1.5em;
-    background: #292e35;
+    background: var(--g300);
+    border-bottom: 1px solid var(--g400);
 
     display: flex;
     flex-direction: row;
@@ -16,13 +17,13 @@
     border-bottom-left-radius: 1em;
     border-bottom-right-radius: 1em;
     padding: 1.5em;
-    background: #22272d;
+    background: var(--g300);
 }
 
 .header:not([data-is-popup]), .container:not([data-is-popup]) {
     border-radius: 0;
     background: transparent;
-    border-bottom: 1px solid #2f3136;
+    border-bottom: 1px solid var(--g400);
 }
 
 .row {
@@ -30,24 +31,25 @@
 }
 
 .compilerSelect {
-    border-top-left-radius: .5rem;
-    border-bottom-left-radius: .5rem;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
     border-top-right-radius: 0;
-    border-bottom-right-radius: 0;;
+    border-bottom-right-radius: 0;
+    border-right: 0;
 }
 
 .textbox {
     flex: 1;
 
-    background: #00000044;
-    box-shadow: 0 2px 16px #00000022;
-    border: 0;
-    color: #0AFAFA;
+    background: var(--g200);
+    border: 1px solid var(--g400);
+    border-left: 0;
+    color: var(--frog-secondary);
 
     border-top-left-radius: 0;
     border-bottom-right-radius: 0;
-    border-top-right-radius: .5rem;
-    border-bottom-right-radius: .5rem;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 
     font-family: monospace;
     font-size: .8rem;
@@ -67,11 +69,11 @@
     display: inline-block;
     cursor: default;
     padding: .75em;
-    border-radius: .5em;
+    border-radius: 12px;
 }
 
 .flag:hover {
-    background: #00000022;
+    background: var(--g400);
 }
 
 .flag label {
