--- a/frontend/src/components/AsyncButton.module.css
+++ b/frontend/src/components/AsyncButton.module.css
@@ -1,6 +1,7 @@
 .errorPopup {
     font-size: 0.8rem;
     background: #bb4444;
+    color: var(--a800);
     padding: 1rem;
     border-radius: 0.4rem;
     min-width: 6rem;
@@ -9,5 +10,4 @@
     align-items: center;
     justify-content: center;
 
-    pointer-events: none;
 }
