--- a/frontend/src/components/Button.module.scss
+++ b/frontend/src/components/Button.module.scss
@@ -12,7 +12,7 @@
     align-items: center;
 
     background: transparent;
-    color: inherit;
+    color: var(--a800);
     border: 1px solid var(--g500);
 
     transition: color .2s ease, background .15s ease, border-color .15s ease;
@@ -25,6 +25,7 @@
         cursor: pointer;
 
         &:hover {
+            color: var(--a900);
             border-color: var(--g800);
         }
     }
@@ -32,6 +33,7 @@
 
 .primary {
     background: var(--accent);
+    color: var(--g2000);
     border-color: var(--a200);
 
     &:not(:disabled):hover {
