--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -41,6 +41,7 @@ html {
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
     line-height: 1.5;
     text-rendering: optimizeQuality;
+    overflow: hidden;
 
     --ratio: 1.25;
     --s-5: calc(var(--s-4) / var(--ratio));
