--- a/frontend/src/components/Editor/MonacoEditor.module.scss
+++ b/frontend/src/components/Editor/MonacoEditor.module.scss
@@ -6,7 +6,7 @@
     overflow: hidden;
     & :global(.monaco-editor-background),
     & :global(.margin),
-    & :global(.monaco-editor .inputarea.ime-input) {
+    & :global(.inputarea.ime-input) {
         background-color: transparent !important;
     }
 
