fix monaco red bg for real this time

--- a/frontend/src/components/Editor/MonacoEditor.module.scss
+++ b/frontend/src/components/Editor/MonacoEditor.module.scss
@@ -4,6 +4,7 @@
 
     /* fix border-radius overflow */
     overflow: hidden;
+    & :global(.monaco-editor),
     & :global(.monaco-editor-background),
     & :global(.margin),
     & :global(.inputarea.ime-input) {
