better loading state for user page

--- a/frontend/src/pages/u/[username].module.css
+++ b/frontend/src/pages/u/[username].module.css
@@ -46,3 +46,9 @@
 .username a:hover {
     color: white;
 }
+
+.loadingPage {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
