fix new scratch page responsiveness bug
Reported by Quate on Discord

--- a/frontend/src/pages/scratch.module.scss
+++ b/frontend/src/pages/scratch.module.scss
@@ -28,7 +28,7 @@
         padding-top: 4px;
         color: var(--g1000);
         font-size: .9em;
-        width: 50ch;
+        max-width: 50ch;
     }
 }
 
